--- a/_posts/2020-08-24-denken.markdown
+++ b/_posts/2020-08-24-denken.markdown
@@ -18,14 +18,14 @@ Das Nachdenken ist eine gute und notwendige Inspiration fürs eigene Denken. Dab
 -----
 ### Beispiel: 
 
-Es geht ums Fließen. Gedanklich frei von einem Gedanken zum nächsten. Wer lenkt dabei den Fluß?
+Es geht ums Fließen. Gedanklich frei von einem Gedanken zum nächsten. Wer lenkt dabei den Fluss?
 >Die Logik, sie hat aber auch Grenzen.
 
 Wer kann sonst noch lenken?
 >Die Neugier. Sie ist nicht logisch, sie will entdecken.
 
 Ist es logisch, entdecken zu wollen?
->In gewisser Weiße ja. Es gibt einen Kompromiss zwischen Ergründung und Aussschöpfung (dessen was man schon ergründet hat)
+>In gewisser Weiße ja. Es gibt einen Kompromiss zwischen Ergründung und Ausschöpfung (dessen was man schon ergründet hat)
 
 Existiert ein optimales Gleichgewicht?
 >Es ändert sich im Leben. Je später, desto höher der Anteil an Ausschöpfung.
@@ -49,7 +49,7 @@ Wie ist das Verhältnis zwischen Ausschöpfen und Ergründen zur Zeit?
 >Die Ausschöpfer haben den Staat, die Stabilität und Ordnung. Sie haben die Strukturen, die Polizei und damit das Gewaltmonopol. Dem steht nichts gegenüber, keine ausgleichende Instanz. Ich denke aber solange die Gedanken noch frei sind ist das Gleichgewicht noch intakt.
 
 Warum braucht man ein Gleichgewicht? Wenn alles gut ist kann man ja mit dem Status Quo zufrieden sein und muss nichts mehr Ergründen?
->Nichts ist so beständig wie der Wandel. Macht man es sich zu bequem verlernt man das Ergründen. Wird es dann mal wichtig kann man es nichtmehr. 
+>Nichts ist so beständig wie der Wandel. Macht man es sich zu bequem verlernt man das Ergründen. Wird es dann mal wichtig kann man es nicht mehr. 
 
 ------------------------
 ### Anmerkungen
