--- a/_posts/2020-09-04-flow01.markdown
+++ b/_posts/2020-09-04-flow01.markdown
@@ -17,7 +17,7 @@ Will man möglichst oft im Flow Zustand sein (mir fallen wenig Gründe ein, waru
 
 Um den Flow Zustand gezielt provozieren zu können, muss man erstens seine Fähigkeiten gut einschätzen können, und zweitens selbstbestimmt genug leben können, sich seine Herausforderungen passend zu suchen. Kann man, aus welchen Gründen auch immer, kein selbstbestimmtes Leben führen, muss man seine Fähigkeiten der Instanz, die die Aufgaben definiert und verteilt, die momentanen Fähigkeiten möglichst ehrlich kommunizieren.
 
-Will man sein ganzes Leben im Flowzustand verbringen, braucht man ein ausreichend großes *Lebensziel*. Dann defniert man sich kleinere Subziele, die alle auf das große Ziel ausgerichtet sind und jeweils den aktuellen Fähigkeiten entsprechen. Hat man Vertrauen in die eigenen Planungsfähigkeiten zum Zeitpunkt der Planung, und Vertrauen in die Werte, denen das Lebensziel dient, kann man den Kopf abschalten und die Ziele eines nach dem anderen im Flowzustand erreichen. Man kann ja regelmässig (nicht zu oft) einen Schritt zurückmachen, den kritischen Denker wieder ins Boot holen, und das Lebensziel (und die aktuellen Subziele) unter dem Licht der neuen Fähigkeit und Erfahrungen einer erneuten Prüfung unterziehen und gegebenenfalls anpassen.
+Will man sein ganzes Leben im Flowzustand verbringen, braucht man ein ausreichend großes *Lebensziel*. Dann definiert man sich kleinere Subziele, die alle auf das große Ziel ausgerichtet sind und jeweils den aktuellen Fähigkeiten entsprechen. Hat man Vertrauen in die eigenen Planungsfähigkeiten zum Zeitpunkt der Planung, und Vertrauen in die Werte, denen das Lebensziel dient, kann man den Kopf abschalten und die Ziele eines nach dem anderen im Flowzustand erreichen. Man kann ja regelmäßig (nicht zu oft) einen Schritt zurückmachen, den kritischen Denker wieder ins Boot holen, und das Lebensziel (und die aktuellen Subziele) unter dem Licht der neuen Fähigkeit und Erfahrungen einer erneuten Prüfung unterziehen und gegebenenfalls anpassen.
 
 Musashi dazu:
 > Worum es ihm wirklich ging, war einzig, mehr Zeit zum Meditieren zu haben. Er mußte zu einer größeren Harmonie gelangen, um sicherzugehen, daß seine Ideen nicht seiner Fähigkeit zu handeln vorauseilten.
