--- a/_posts/2020-10-08-angst.markdown
+++ b/_posts/2020-10-08-angst.markdown
@@ -7,12 +7,12 @@ tags: angst kultur krieg abstrahieren
 description: Angst in in gewisser Weise ein Wegweiser.
 ---
 
-Angst in in gewisser Weise ein Wegweiser. Sachen vor denen man Angst hat beschäftigen einen, haben Relevanz. Es ist eine starke Emotion, die nicht gut ignoriert werden kann, was abgesehen davon auch nicht sehr dienlich ist. Bohrt man sehr tief nach dem Ursprung, der Wurzel von Ängsten kann man auf existentielle Ängste stoßen, die sich  wie Löcher verhalten, nicht wie Brocken. Löcher ohne Boden, egal wieviel Aufmerksamkeit man in sie investiert, sie werden nicht gefüllt. Alle Ängste abbauen wollen kann nicht das Ziel sein, da verläuft man sich zu leicht in der Leere.
+Angst in in gewisser Weise ein Wegweiser. Sachen vor denen man Angst hat beschäftigen einen, haben Relevanz. Es ist eine starke Emotion, die nicht gut ignoriert werden kann, was abgesehen davon auch nicht sehr dienlich ist. Bohrt man sehr tief nach dem Ursprung, der Wurzel von Ängsten kann man auf existentielle Ängste stoßen, die sich  wie Löcher verhalten, nicht wie Brocken. Löcher ohne Boden, egal wie viel Aufmerksamkeit man in sie investiert, sie werden nicht gefüllt. Alle Ängste abbauen wollen kann nicht das Ziel sein, da verläuft man sich zu leicht in der Leere.
 
 Angst ist die Bedingung Mut zu zeigen, Mut ist nicht die Abwesenheit von Angst, sondern die Bereitschaft etwas trotz Angst zu tun. 
-Angst is ein wertvoller Begleiter, mahnt zur Vorsicht, ermöglicht reflektiertes Handeln. 
+Angst ist ein wertvoller Begleiter, mahnt zur Vorsicht, ermöglicht reflektiertes Handeln. 
 Die Angst manipuliert zu werden ist z.B. eine Eingangstüre zum kritischen, selbstständigen Denken.
-Ist man sicher das man nicht manipuliert werden kann, macht man es potentiellen Manipulatoren zu einfach. Ist man sicher das man die Welt verstanden hat und weiß wie es läuft schließt man die Türe zu neuen Erkentnissen.
+Ist man sicher das man nicht manipuliert werden kann, macht man es potentiellen Manipulatoren zu einfach. Ist man sicher das man die Welt verstanden hat und weiß wie es läuft schließt man die Türe zu neuen Erkenntnissen.
 
 Unreflektierte Angst verliert ihre Form, wird eine schwarze zähe Masse, die sich im inneren (in der Brust) festsetzt. Will man dann irgendwann mal ran, wirkt sie ungreifbar, formlos. Alles schöne gute helle löst sich in ihr auf, sie breitet sich aus und zieht alles in ihren Bann. Der schwarze Teer legt sich auf die Brille mit der man die Welt sieht. Sie lähmt, verhindert alles handeln. Will jemand von außen eine helfende Hand leihen greift die schwarze Masse nach ihr und will sie assimilieren, auf die dunkle Seite ziehen.
 
