--- a/_posts/2021-02-11-musashi.markdown
+++ b/_posts/2021-02-11-musashi.markdown
@@ -29,7 +29,7 @@ Takezo erhielt daraufhin im Alter von 21 Jahren den Namen Miyamoto Musashi als S
 
 > Musashi hatte seinen eigenen Weg beschritten und entdeckte nun Tag für Tag, wie unendlich lang und mühselig dieser Pfad war, der zur echten Menschlichkeit führte.
 
-Auf seinen weiteren Weg trifft er viele die sich vermeintlich ebenfalls dem Weg des Schwertes verpflichtet haben. Ehrwürdige Schulen mit aroganten Schülern und Meistern, die sich auf lange verblassten Ruhm ausruhen und der Dekandenz erlegen sind. Ihre tatsächlichen Fähigkeiten als Kämpfer sind, sofern sie jemals existiert haben, verkümmert. Musashi degradiert alle Kampfschulen des Landes, denen er auf seinen Reisen begegnet. Sein Weg ist einfach und direkt, sein Ziel klar. Er will der beste Schwertkämpfer werden den es jemals gab. Er kann sich auf die Reinheit seines Strebens verlassen und alles für dieses Ziel irrelevante ausblenden. Die Verpflichtung zum Weg des Schwertes schützt ihn vor Arroganz und er arbeitet stetig daran, seine Fähigkeiten als Schwertkämpfer zu perfektionieren. Er verzichtet darauf, sich mit seiner großen Liebe Otsu niederzulassen und darauf, prestigeträchtige Positionen als Samurai anzunehmen um auf keinen Fall seine Ideale zu verraten. 
+Auf seinen weiteren Weg trifft er viele die sich vermeintlich ebenfalls dem Weg des Schwertes verpflichtet haben. Ehrwürdige Schulen mit aroganten Schülern und Meistern, die sich auf lange verblassten Ruhm ausruhen und der Dekadenz erlegen sind. Ihre tatsächlichen Fähigkeiten als Kämpfer sind, sofern sie jemals existiert haben, verkümmert. Musashi degradiert alle Kampfschulen des Landes, denen er auf seinen Reisen begegnet. Sein Weg ist einfach und direkt, sein Ziel klar. Er will der beste Schwertkämpfer werden den es jemals gab. Er kann sich auf die Reinheit seines Strebens verlassen und alles für dieses Ziel irrelevante ausblenden. Die Verpflichtung zum Weg des Schwertes schützt ihn vor Arroganz und er arbeitet stetig daran, seine Fähigkeiten als Schwertkämpfer zu perfektionieren. Er verzichtet darauf, sich mit seiner großen Liebe Otsu niederzulassen und darauf, prestigeträchtige Positionen als Samurai anzunehmen um auf keinen Fall seine Ideale zu verraten. 
 
 Im Laufe seiner Reise lernt er den Weg des Schwertes überall zu sehen. In der Kunst, im Ackerbau, in der Politik, in der Teezeremonie und im Zen. Er übt sich in all diesen Disziplinen und beschreitet nun den Weg der Menschlichkeit. Er lernt, dass Selbstdisziplin und Bildung, in einer im Frieden lebenden Gesellschaft wichtiger sind als die Kriegskunst. Er erkennt das einige Gegenden des Landes prosperieren und andere verkommen. Er lernt den Wert von Stabilität und gewissenhaften Landwirtschaften kennen und versucht sich auch selbst als Landwirt. Er hat mit unkonventionellen, klugen Methoden unerwartet Erfolg und schafft es, trotz Zweifels und Spott der ansässigen Bevölkerung, ein Stück Land fruchtbar zu machen. Auch bringt er den Bewohnern des Dorfes bei sich gegen Banditen zu verteidigen. Er ist in jeder Hinsicht ein bereichernder Faktor auf sein Umfeld. Auch hat er zu dieser Zeit einen Schüler, der sich jedoch eine andere Ausbildung auf dem Weg zum Schwertkämpfer vorgestellt hat.
 
@@ -54,7 +54,7 @@ Steht immer im Schatten Musashis, traut sich nichts zu. Von Zweifeln zerfressen.
 > Musashi: Kein Mensch kann dir ein ehrbares Leben schaffen, das musst du schon selbst tun.
 > Du wirst dir niemals einen Namen machen, wenn du nur das tust, was auch die anderen tun. Du musst einen Weg finden, dich auszuzeichnen - und von den anderen abzuheben
 
-Die Tragik in Matahachis Schicksal ist fast zum lachen. Egal was er versucht, letztendlich scheitert es. Er hat keine Ideale und ist deshalb vom Pech verfolgt. Er versucht zum eigenen Vorteil clever und geschickt zu sein, reitet sich aber dadurch immer tiefer in sein Unglück. Er versucht mutig zu sein, wird aber dadurch von Attentätern als Mörder intrumentalisiert.
+Die Tragik in Matahachis Schicksal ist fast zum lachen. Egal was er versucht, letztendlich scheitert es. Er hat keine Ideale und ist deshalb vom Pech verfolgt. Er versucht zum eigenen Vorteil clever und geschickt zu sein, reitet sich aber dadurch immer tiefer in sein Unglück. Er versucht mutig zu sein, wird aber dadurch von Attentätern als Mörder instrumentalisiert.
 
 > Eure Art von Mut hat etwas Erschreckendes, Matahachi.
 
@@ -65,7 +65,7 @@ Sein konstantes Versagen ist der Grund das Osugi sich gegen Musashi wendet. Er i
 ### Osugi 
 *Matahachis Mutter und Matriarchin der Familie Hon'iden*
  
-Osugis Rolle in der Geschichte hat mich in ihrer Tiefe vielleicht am meisten beeindruckt. Oberflächlich könnte man sie für die eigentliche Antagonistin halten. Sie stellt sich dem jungen Glück von Musashi und Otsu in den Weg. Ihr verkommener Sohn Matahachi hat Schande über die Familie Hon'iden gebracht. Sie projeziert dieses Gefühl der Schande auf Musashi und macht ihn für alles verantwortlich. Sie versucht alles in ihrer Macht stehende, um seinen Ruf und sein Leben zu ruinieren. Sie kämpft dreckig, mit den Waffen einer alten Frau. Dieser ungewöhnliche Gegner, gegen den Musashis Kraft nichts ausrichten kann, symbolisiert die Tradition. Er, der größte Schwertkämpfer aller Zeiten, ist kurz davor von der über 60-jährigen Osugi besiegt zu werden. Auch ist sie die Konsequenz die seine Handlungen als Takezo bedingen. Manifestiertes Karma, aus der Zeit bevor er ein angepasster, sozialisierter, echter Mensch wurde. Erst als Musashi auf dem Weg zu seinem finalen Kampf mit Kojiro ist, und er sich mit dem Tod abgefunden hat, schließen die beiden Frieden.
+Osugis Rolle in der Geschichte hat mich in ihrer Tiefe vielleicht am meisten beeindruckt. Oberflächlich könnte man sie für die eigentliche Antagonistin halten. Sie stellt sich dem jungen Glück von Musashi und Otsu in den Weg. Ihr verkommener Sohn Matahachi hat Schande über die Familie Hon'iden gebracht. Sie projiziert dieses Gefühl der Schande auf Musashi und macht ihn für alles verantwortlich. Sie versucht alles in ihrer Macht stehende, um seinen Ruf und sein Leben zu ruinieren. Sie kämpft dreckig, mit den Waffen einer alten Frau. Dieser ungewöhnliche Gegner, gegen den Musashis Kraft nichts ausrichten kann, symbolisiert die Tradition. Er, der größte Schwertkämpfer aller Zeiten, ist kurz davor von der über 60-jährigen Osugi besiegt zu werden. Auch ist sie die Konsequenz die seine Handlungen als Takezo bedingen. Manifestiertes Karma, aus der Zeit bevor er ein angepasster, sozialisierter, echter Mensch wurde. Erst als Musashi auf dem Weg zu seinem finalen Kampf mit Kojiro ist, und er sich mit dem Tod abgefunden hat, schließen die beiden Frieden.
 
 > »Wir sind gekommen, dir das Geleit zu geben«, sagte Osugi. »Und ich bin auch gekommen, dich um Verzeihung zu bitten.« »Um Verzeihung? Mich?« »Ja, für alles. Ich möchte dich bitten, mir zu verzeihen.«
 > Fragend sah er ihr ins Gesicht. Die Worte klangen unwirklich. »Warum sagt Ihr das, Großmutter? Ist irgend etwas geschehen?«
@@ -85,7 +85,7 @@ Ignoriert gesellschaftliche Normen, bewegt sich außerhalb des Systems. Ist im H
 ### Otsu
 *im Tempel aufgewachsenes Waisenmädchen, Verlobte Matahachis*
 
-Otsu ist zwar eine der weiblichen Protagonistinen, ihr wird aber kaum Tiefe zugestanden. Sie ist die verunsicherte, schüchterne, mysteriöse, hilflose, schöne, zarte Frau, die sich nach dem edlen Musashi sehnt. Das ist wahrscheinlich das typische Ideal für Frauen in Japan zu dieser Zeit.
+Otsu ist zwar eine der weiblichen Protagonistinnen, ihr wird aber kaum Tiefe zugestanden. Sie ist die verunsicherte, schüchterne, mysteriöse, hilflose, schöne, zarte Frau, die sich nach dem edlen Musashi sehnt. Das ist wahrscheinlich das typische Ideal für Frauen in Japan zu dieser Zeit.
 
 ### Koetsu 
 *Künstler, der mit seiner Mutter, der Nonne Myoshu lebt*
@@ -93,14 +93,14 @@ Weiht Musashi in die Kunst und den Weg der Malerei ein.
 
 ## Nennenswerte Einträge aus Musashis *Merkbuch*
 
-> Versuche nicht, dich dem Lauf des Universums entgegenzustemmen. Versuche als erstes, das Wesen des Universums zu erkennen
+> Versuche nicht, dich dem Lauf des Universums entgegen zustemmen. Versuche als erstes, das Wesen des Universums zu erkennen
 
 > Zwar befinden wir uns jetzt nicht im Krieg, aber das Ringen ums Überleben in einer friedlichen Welt ist nicht minder schwierig. Man muss kämpfen, muss einen Plan haben.
 
 > Ich will nichts, garnichts bedauern
 > Ich will meine Handlungen nicht bedauern
 > Ich will nichts tun, dass ich hinterher bedauern muss
-> Nur der dritte Unterstrich seinen Entschluss, so zu handeln, dass Selbstvorwuerfe sich erübrigten
+> Nur der dritte Unterstrich seinen Entschluss, so zu handeln, dass Selbstvorwürfe sich erübrigten
 
 > Unterschiede zwischen den Menschen bestanden wohl nur darin, wie sie mit ihren jeweiligen Schwächen fertig wurden.
 
@@ -111,7 +111,7 @@ Weiht Musashi in die Kunst und den Weg der Malerei ein.
 
 > Ein leichtes Dasein konnte nur mit Beschränkungen erkauft werden, und denen mochte er sich nicht unterwerfen.
 
-> Doch seine Absicht, die Schale der einengenden Muschel zu zerbrechen, ehe sie unduuchdringlich wurde, war in nichts zerronnen. Die Schale war noch da und umschloss sein hohles Selbst wie die abgestreifte Haut einer Zikade.
+> Doch seine Absicht, die Schale der einengenden Muschel zu zerbrechen, ehe sie undurchdringlich wurde, war in nichts zerronnen. Die Schale war noch da und umschloss sein hohles Selbst wie die abgestreifte Haut einer Zikade.
 
 Musashi [M] im Gespräch mit dem Priester Gudo [G]:
 
