--- a/_posts/2020-08-24-leere.markdown
+++ b/_posts/2020-08-24-leere.markdown
@@ -29,7 +29,7 @@ Ich denke die Leere ist für viele kreative Menschen ein Antrieb. Es geht darum 
 Eine Faszination der Leere ist das sie das Unendliche bedingt. Die Leere und das Unendliche sind beide nicht greifbar. Die Leere ist eine von den gefährlicheren Dingen auf die man treffen kann. Sie ist Quelle und Senke. Es ist nicht klar wie man mit ihr umgehen soll, viele Organisationen versuchen es, es wirkt aber immer ein bisschen wie Betrug. Man kann sich Jahre lang an ihr abarbeiten, versuchen sie in einen Wett-Starren zum Einknicken zu bringen. Während man das macht merkt man garnicht wie albern und zwecklos es ist ;) Sie hat wie ein Schwarzes Loch eine enorme Anziehungskraft. Das Bild mit dem schwarzen Loch passt ganz gut, weil im Zentrum unserer Galaxie ja auch ein schwarzes Loch (Sagittarius A\*) ist. 
 ![]({{'/assets/images/leere_search.jpg'}}){: .center-image }{:width="400px"}*Herausfordern der Leere*
 
-Das Bild das man von der Leere und dem Unendlichen hat hängt mit dem Bild vom Universum zusammen. Daher entwickelt es sich mit neuen wissenschaftlichen Erkenntnissen. Wie es angenfangen hat (Big Bang), was vorher war(???), was jenseits der Grenze ist (dunkle Materie?), wie es endet (Kältetod) und wie das jetzt genau mit der Expansion ist (konstant oder beschleunigt), ob es deterministisch ist oder zufällig. Vieles davon steht noch zur Debatte, die Absperrbänder um die Debatte sind aber sehr real, die Fronten verhärtet. Vor allem bei der Quantenmechanik hat sich die Kopenhagen-Interpretation durchgesetzt. Nur langsam sprechen Leute wieder über andere Interpretationen, wie etwa die many-worlds Interpretation.
+Das Bild das man von der Leere und dem Unendlichen hat hängt mit dem Bild vom Universum zusammen. Daher entwickelt es sich mit neuen wissenschaftlichen Erkenntnissen. Wie es angefangen hat (Big Bang), was vorher war(???), was jenseits der Grenze ist (dunkle Materie?), wie es endet (Kältetod) und wie das jetzt genau mit der Expansion ist (konstant oder beschleunigt), ob es deterministisch ist oder zufällig. Vieles davon steht noch zur Debatte, die Absperrbänder um die Debatte sind aber sehr real, die Fronten verhärtet. Vor allem bei der Quantenmechanik hat sich die Kopenhagen-Interpretation durchgesetzt. Nur langsam sprechen Leute wieder über andere Interpretationen, wie etwa die many-worlds Interpretation.
 
 ------------------------
 ### Anmerkungen
