--- a/_posts/2021-02-10-freiheit.markdown
+++ b/_posts/2021-02-10-freiheit.markdown
@@ -29,8 +29,8 @@ figcaption {
 </style>
 
 
-Für negative Freiheit haben unserer Vorfahren mindestens seit der Rennaissance[^1] (15. und 16. Jahrhundert) gekämpft und sie auch erfolgreich implementiert. Die negative Freiheit nahm konstant zu, über die Reformation (1517 bis 1648) und die Aufklärung (1700), bis zum vermeintlichen Gipfel, der französischen Revolution (1789).
-Zwänge und Traditionen wurden immer weiter abgebaut, Grundbedürfnisse immer effizienter befriedigt. Negative Freiheit bedingte mehr Freiraum für postive Freiheit. Als Konsequenz mussten / durften sich die Menschen um immer mehr Belange der Existenz selber kümmern. Mehr Bereiche ihres subjektiven Lebens selber gestalten. 
+Für negative Freiheit haben unserer Vorfahren mindestens seit der Renaissance[^1] (15. und 16. Jahrhundert) gekämpft und sie auch erfolgreich implementiert. Die negative Freiheit nahm konstant zu, über die Reformation (1517 bis 1648) und die Aufklärung (1700), bis zum vermeintlichen Gipfel, der französischen Revolution (1789).
+Zwänge und Traditionen wurden immer weiter abgebaut, Grundbedürfnisse immer effizienter befriedigt. Negative Freiheit bedingte mehr Freiraum für positive Freiheit. Als Konsequenz mussten / durften sich die Menschen um immer mehr Belange der Existenz selber kümmern. Mehr Bereiche ihres subjektiven Lebens selber gestalten. 
 
 [^1]: Angefangen hat das schon vor Tausenden Jahren, als sich die Menschen (hauptsächlich durch Ackerbau) von der Natur abgenabelt haben.
 
@@ -39,15 +39,15 @@ Die negative Freiheit hat in Europa also ein solides Fundament, ist systemisch g
 Ich denke es führt zu nichts, wenn man sagt, man ist frei alles zu tun und das Thema damit abzuschließen. Genauer wäre es zu sagen, man ist durch Wohlstand und technischen Fortschritt größtenteils davon befreit, Dinge tun zu müssen, hat also geschichtlich gesehen den Zenit an negativer Freiheit erreicht.
 
 Positive Freiheit ist Denken und Leben ohne Sicherheitsgeländer. Das kann, je nach Level an negativer Freiheit, einschüchternd sein, weil es keine Orientierung gibt, keine Richtung. 
-Irgendwann führt das Ideal der Maximierung der negativen Freiheit nicht mehr weiter. Alle belastenden Zwänge und Traditionen wurden abgebaut, es muss aber irgendwie (positiv) weiter gehen. Wann ist die Strömung, die in Europa im 15. Jh begonnen hat vorbei? War es Anfang des 20. Jh? Da haben zumindest viele Menschen ihre Freiheit abgegeben und sich einem faschistischen System hingegeben. Aber seit dem gab es doch eine vermeintliche (Re)Rennaissance der negativen Freiheit. Sie wurde formalisiert und in Gesetz gegossen, vielleicht hat sie das zu schwer und träge gemacht und der ursprüngliche Geist war verloren. Man ist doch *vermeintlich* viel weniger Zwängen unterworfen als sogar im 19. Jh. 
+Irgendwann führt das Ideal der Maximierung der negativen Freiheit nicht mehr weiter. Alle belastenden Zwänge und Traditionen wurden abgebaut, es muss aber irgendwie (positiv) weiter gehen. Wann ist die Strömung, die in Europa im 15. Jh begonnen hat vorbei? War es Anfang des 20. Jh? Da haben zumindest viele Menschen ihre Freiheit abgegeben und sich einem faschistischen System hingegeben. Aber seit dem gab es doch eine vermeintliche (Re)Renaissance der negativen Freiheit. Sie wurde formalisiert und in Gesetz gegossen, vielleicht hat sie das zu schwer und träge gemacht und der ursprüngliche Geist war verloren. Man ist doch *vermeintlich* viel weniger Zwängen unterworfen als sogar im 19. Jh. 
 
 Das Gefühl, man habe als Europäer auch die Pflicht sie zu nutzen, um der langen Tradition des Aufbaus von negativer Freiheit gerecht zu werden, ist prävalent. Die Errungenschaften der tapferen Kämpfer, auf denen unsere Kultur basiert, muss ja gewürdigt werden. Ich vermute jedoch, dass die (positive?) Freiheit heute nicht die selbe ist wie die im 19. Jh. Negative Freiheit ist die Pflicht, positive Freiheit die Kür. Implizit wird mehr erwartet den je. Die Zwänge wurden nicht weiter abgebaut, sondern geschickt versteckt. Bzw die Art der Zwänge hat sich gewandelt, und dadurch auch die positive Freiheit, die sie ermöglicht / fordert. Die heutige Freiheit ist ein Simulakrum, eine Kopie (mittlerweile) ohne Original. Sie kann / muss neu gedacht werden.
 
 Es geht ja noch weiter, wenn man sich zu sehr auf die negative Freiheit konzentriert, und versucht sie zu stärken, dreht man sich im Kreis. Sehnt sich nach etwas Bekanntem, etwas mit langer Tradition, und wendet sich gegen das ursprüngliche Ideal. Wenn man sich das Befreien von allen Zwängen zum Lebensinhalt gemacht hat ist das gegen der aufklärerischen Geist, der das überhaupt erst bedingt hat. Ich denke das qualifiziert sich als ein [Catch 22](https://de.wikipedia.org/wiki/Catch-22_(Dilemma) "catch 22")
 
-Man baut sich eine Tradition, ein Sicherheitsgerüst, aus dem Ideal Tradtionen abbauen zu wollen. Was ist es, das man damit aufbaut? Der ominöse Nihilismus, in dem nichts mehr irgendwas bedeutet?
+Man baut sich eine Tradition aus dem Ideal Traditionen abbauen zu wollen. Was ist es, das man damit aufbaut? Der ominöse Nihilismus, in dem nichts mehr irgendwas bedeutet?
 
-Wir sind (negativ) frei. Und zwar auf einen Level, von dem mehr nicht unbedingt besser ist. Nichts ist so gut, dass mehr davon automatisch besser ist[^2]. Wenn wir uns trotz dieses, bei weitem ausreichendem, Levels an negativer Freiheit weiter auf sie als Ideal konzentrieren ist das eine Perversion des Geistes der Aufklärung. Statt Beschränkungen, Dogmen und Fesseln abzubauen, bauen wir ein neues Sicherheitsgerüst, das der *Wokeness*. Das scheint mir das Problem der *social justice warriors* und der *cancel culture* zu sein. Sie ist der Tod von kreativen öffentlichen Austausch, da jedes Wort auf die Goldwaage gelegt und nach den obskuresten Maßstäben der (negativen) Freiheit durchleuchtet wird. Vertößt man gegen ein unrealsitisches Ideal ist man öffentlich gecancelt und hat keine Möglichkeit der Rehabilitation.
+Wir sind (negativ) frei. Und zwar auf einen Level, von dem mehr nicht unbedingt besser ist. Nichts ist so gut, dass mehr davon automatisch besser ist[^2]. Wenn wir uns trotz dieses, bei weitem ausreichendem, Levels an negativer Freiheit weiter auf sie als Ideal konzentrieren ist das eine Perversion des Geistes der Aufklärung. Statt Beschränkungen, Dogmen und Fesseln abzubauen, bauen wir ein neues Sicherheitsgerüst, das der *Wokeness*. Das scheint mir das Problem der *social justice warriors* und der *cancel culture* zu sein. Sie ist der Tod von kreativen öffentlichen Austausch, da jedes Wort auf die Goldwaage gelegt und nach den obskursten Maßstäben der (negativen) Freiheit durchleuchtet wird. Verstößt man gegen ein unrealistisches Ideal ist man öffentlich gecancelt und hat keine Möglichkeit der Rehabilitation.
 
 [^2]: Analog ist auch nichts so schlecht, das nicht ein bisschen was davon gut ist. 
 
@@ -59,7 +59,7 @@ Eine Konsequenz von historisch hoher negativer Freiheit und Individualisierung i
 
 Kritisch sehe ich die (negative) Freiheit als Ideal, weil es leicht scheint sie als Argument zum Abbau von Strukturen und Rahmenbedingungen zu benutzen. Auch im Denken. Und das dann als etwas Positives zu verkaufen.
 
-Das geht einher mit der immer weiteren *Individualisierung* des Einzelnen. Irgendwann ist jeder sein eigener Staat, der sich um alle Belange selber kümmern muss. Bekommt individuelle Nachrichten angezeigt, die durch den Algorithmus spezifisch auf ihn zugeschnitten wurden. Es gibt auch keinen Weg mehr raus, weil man ja nur sich selbst vetrauen kann. Dem Selbst, das sich selbst verstärkt und definiert hat.
+Das geht einher mit der immer weiteren *Individualisierung* des Einzelnen. Irgendwann ist jeder sein eigener Staat, der sich um alle Belange selber kümmern muss. Bekommt individuelle Nachrichten angezeigt, die durch den Algorithmus spezifisch auf ihn zugeschnitten wurden. Es gibt auch keinen Weg mehr raus, weil man ja nur sich selbst vertauen kann. Dem Selbst, das sich selbst verstärkt und definiert hat.
 
 ------------------------
 ### Podcasts dazu:
