typo und idee ueber takuan

--- a/_posts/2021-02-11-musashi.markdown
+++ b/_posts/2021-02-11-musashi.markdown
@@ -15,7 +15,7 @@ Die Geschichte beginnt mit dem 16-jährigen Takezo, der sich mit seinem Jugendfr
 
 Im Dorf wird Musashi, nach längerem Katz und Maus spielen schließlich gefangen genommen. Der zen-buddhistische Mönch Takuan hat sein Leben riskiert für das Recht über Takezos Schicksal bestimmen zu dürfen, wenn es ihm gelingt ihn zu fangen. Mit Otsus Hilfe ist es ihm auch gelungen, obwohl sich in ihr der Zweifel an seinen Methoden gefestigt hatte.
 
-> Manchmal werden Leute, die nicht ganz richtig im Kopf sind, von anderen für Genies gehalten. Möglich, daß Takuan einer von diesen war. In Otsu nahm dieser Gedanke mehr und mehr Gestalt an.
+> Manchmal werden Leute, die nicht ganz richtig im Kopf sind, von anderen für Genies gehalten. Möglich, dass Takuan einer von diesen war. In Otsu nahm dieser Gedanke mehr und mehr Gestalt an.
 
 Es war Otsus Flötenspiel, das Takezo aus der Reserve direkt in Takuans "Falle" gelockt hat. Der Beginn ihrer langjährigen zarten Andeutung einer Liebesbeziehung. 
 
@@ -29,7 +29,7 @@ Takezo erhielt daraufhin im Alter von 21 Jahren den Namen Miyamoto Musashi als S
 
 > Musashi hatte seinen eigenen Weg beschritten und entdeckte nun Tag für Tag, wie unendlich lang und mühselig dieser Pfad war, der zur echten Menschlichkeit führte.
 
-Auf seinen weiteren Weg trifft er viele die sich vermeintlich ebenfalls dem Weg des Schwertes verpflichtet haben. Ehrwürdige Schulen mit aroganten Schülern und Meistern, die sich auf lange verblassten Ruhm ausruhen und der Dekadenz erlegen sind. Ihre tatsächlichen Fähigkeiten als Kämpfer sind, sofern sie jemals existiert haben, verkümmert. Musashi degradiert alle Kampfschulen des Landes, denen er auf seinen Reisen begegnet. Sein Weg ist einfach und direkt, sein Ziel klar. Er will der beste Schwertkämpfer werden den es jemals gab. Er kann sich auf die Reinheit seines Strebens verlassen und alles für dieses Ziel irrelevante ausblenden. Die Verpflichtung zum Weg des Schwertes schützt ihn vor Arroganz und er arbeitet stetig daran, seine Fähigkeiten als Schwertkämpfer zu perfektionieren. Er verzichtet darauf, sich mit seiner großen Liebe Otsu niederzulassen und darauf, prestigeträchtige Positionen als Samurai anzunehmen um auf keinen Fall seine Ideale zu verraten. 
+Auf seinen weiteren Weg trifft er viele die sich vermeintlich ebenfalls dem Weg des Schwertes verpflichtet haben. Ehrwürdige Schulen mit arroganten Schülern und Meistern, die sich auf lange verblassten Ruhm ausruhen und der Dekadenz erlegen sind. Ihre tatsächlichen Fähigkeiten als Kämpfer sind, sofern sie jemals existiert haben, verkümmert. Musashi degradiert alle Kampfschulen des Landes, denen er auf seinen Reisen begegnet. Sein Weg ist einfach und direkt, sein Ziel klar. Er will der beste Schwertkämpfer werden den es jemals gab. Er kann sich auf die Reinheit seines Streben verlassen und alles für dieses Ziel irrelevante ausblenden. Die Verpflichtung zum Weg des Schwertes schützt ihn vor Arroganz und er arbeitet stetig daran, seine Fähigkeiten als Schwertkämpfer zu perfektionieren. Er verzichtet darauf, sich mit seiner großen Liebe Otsu niederzulassen und darauf, prestigeträchtige Positionen als Samurai anzunehmen um auf keinen Fall seine Ideale zu verraten. 
 
 Im Laufe seiner Reise lernt er den Weg des Schwertes überall zu sehen. In der Kunst, im Ackerbau, in der Politik, in der Teezeremonie und im Zen. Er übt sich in all diesen Disziplinen und beschreitet nun den Weg der Menschlichkeit. Er lernt, dass Selbstdisziplin und Bildung, in einer im Frieden lebenden Gesellschaft wichtiger sind als die Kriegskunst. Er erkennt das einige Gegenden des Landes prosperieren und andere verkommen. Er lernt den Wert von Stabilität und gewissenhaften Landwirtschaften kennen und versucht sich auch selbst als Landwirt. Er hat mit unkonventionellen, klugen Methoden unerwartet Erfolg und schafft es, trotz Zweifels und Spott der ansässigen Bevölkerung, ein Stück Land fruchtbar zu machen. Auch bringt er den Bewohnern des Dorfes bei sich gegen Banditen zu verteidigen. Er ist in jeder Hinsicht ein bereichernder Faktor auf sein Umfeld. Auch hat er zu dieser Zeit einen Schüler, der sich jedoch eine andere Ausbildung auf dem Weg zum Schwertkämpfer vorgestellt hat.
 
@@ -72,15 +72,15 @@ Osugis Rolle in der Geschichte hat mich in ihrer Tiefe vielleicht am meisten bee
 
 Er hat sich in der Vorbereitung auf den Kampf jedoch von allem Unwesentlichen befreit. Er hat sogar Osugi, die ihr bestes getan hat sein Leben zu ruinieren, vergessen. Erst als er diesen Zustand erreicht hat, hat Osugi es fertig gebracht sich zu entschuldigen. Ihn mit neuen Augen als Musashi zu sehen und das Leid zu verzeihen, dass er als Takezo über ihr Dorf gebracht hat.
 
-> Die Hände flehentlich zusammengelegt, stand sie da. »Was soll ich sagen? Ich habe so viel Böses getan, daß ich nicht hoffen darf, für alles Verzeihen zu finden. Es war alles ein ... ein schrecklicher Irrtum. Die Liebe zu meinem Sohn hat mich verblendet, doch jetzt kenne ich die Wahrheit. Bitte, vergib mir!«
+> Die Hände flehentlich zusammengelegt, stand sie da. »Was soll ich sagen? Ich habe so viel Böses getan, dass ich nicht hoffen darf, für alles Verzeihen zu finden. Es war alles ein ... ein schrecklicher Irrtum. Die Liebe zu meinem Sohn hat mich verblendet, doch jetzt kenne ich die Wahrheit. Bitte, vergib mir!«
 > Einen Moment starrte er sie an, dann kniete er nieder und nahm ihre Hände. Er wagte nicht, die Augen zu heben, aus Angst, es könnten Tränen darin sein. Als er die alte Frau so zerknirscht sah, fühlte auch er sich schuldig. Aber er war auch dankbar. Osugis Hand zitterte, und sogar seine bebte ganz leicht.
-> Es dauerte etwas, bis er sich wieder in Gewalt hatte. »Ich glaube Euch, Großmutter. Ich bin Euch dankbar, daß Ihr gekommen seid. Jetzt kann ich dem Tod ohne Bedauern ins Auge sehen und mit freiem Geist und frohem Herzen in dieses Treffen gehen.« »Dann verzeihst du mir?«
+> Es dauerte etwas, bis er sich wieder in Gewalt hatte. »Ich glaube Euch, Großmutter. Ich bin Euch dankbar, dass Ihr gekommen seid. Jetzt kann ich dem Tod ohne Bedauern ins Auge sehen und mit freiem Geist und frohem Herzen in dieses Treffen gehen.« »Dann verzeihst du mir?«
 > »Selbstverständlich tue ich das, wenn Ihr mir all den Kummer vergebt, den ich Euch bereitet habe, seit ich ein Knabe war.«
 
 ### Takuan 
 *zen-buddhistischer Wandermönch*
 
-Ignoriert gesellschaftliche Normen, bewegt sich außerhalb des Systems. Ist im Herzen jung geblieben, unterhält sich zum Beispiel auf Augenhöhe mit Otsu, die im Koster wohnt oder läuft in einem sehr prüdem Japan halbnackt durch die Gegend. Er ist aber keine Narr, ist gut vernetzt, und formt die Vorgänge der jungen Nation nicht unwesentlich. Er ist politisch aktiv und immer am richtigen Ort zur richtigen Zeit. Er rettet am Anfang des Romans Takezos Leben und gegen Ende auch das von Matahachi. Trotz seiner gesellschaftlichen recht hohen Stellung als Mönch erhebt er keinen Anspruch absolute Wahrheiten zu kennen. Er spricht sich explizit gegen übertriebene Frömmelei aus und dagegen, dass sich Klöster an der Frömmigkeit der Gläubigen bereichern.
+Ignoriert zum Teil gesellschaftliche Normen, kann sich außerhalb des Systems bewegen. Ist im Herzen jung geblieben, unterhält sich zum Beispiel auf Augenhöhe mit Otsu, die im Kloster wohnt oder läuft in einem sehr prüdem Japan halbnackt durch die Gegend. Er ist aber kein Narr, ist gut vernetzt, und formt die Vorgänge der jungen Nation nicht unwesentlich. Er ist politisch aktiv und immer am richtigen Ort zur richtigen Zeit. Er rettet am Anfang des Romans Takezos Leben und gegen Ende auch das von Matahachi. Trotz seiner gesellschaftlichen recht hohen Stellung als Mönch erhebt er keinen Anspruch absolute Wahrheiten zu kennen. Er spricht sich explizit gegen übertriebene Frömmelei aus und dagegen, dass sich Klöster an der Frömmigkeit der Gläubigen bereichern. Er spielt das Status-Spiel nicht, bzw. spielt es in einer Art, die mehrere Interpretationen zulässt. Einige Aspekte Takuan's Leben deuten auf hohen Status hin, andere auf niedrigen. Diese Ambivalenz erlaubt es ihm seinen jeweiligen Status so anzupassen, dass ein Gespräch auf Augenhöhe mit jedem Menschen möglich ist.   
 
 ### Otsu
 *im Tempel aufgewachsenes Waisenmädchen, Verlobte Matahachis*
