--- a/_posts/2021-02-10-freiheit.markdown
+++ b/_posts/2021-02-10-freiheit.markdown
@@ -30,11 +30,11 @@ figcaption {
 
 
 Für negative Freiheit haben unserer Vorfahren mindestens seit der Renaissance[^1] (15. und 16. Jahrhundert) gekämpft und sie auch erfolgreich implementiert. Die negative Freiheit nahm konstant zu, über die Reformation (1517 bis 1648) und die Aufklärung (1700), bis zum vermeintlichen Gipfel, der französischen Revolution (1789).
-Zwänge und Traditionen wurden immer weiter abgebaut, Grundbedürfnisse immer effizienter befriedigt. Negative Freiheit bedingte mehr Freiraum für positive Freiheit. Als Konsequenz mussten / durften sich die Menschen um immer mehr Belange der Existenz selber kümmern. Mehr Bereiche ihres subjektiven Lebens selber gestalten. 
+Zwänge und Traditionen wurden immer weiter abgebaut, Grundbedürfnisse immer effizienter befriedigt. Negative Freiheit bedingte mehr Freiraum für positive Freiheit. Als Konsequenz mussten / durften sich die Menschen um immer mehr Belange der Existenz selber kümmern. Mehr Bereiche ihres subjektiven Lebens selber gestalten. Das Gleichgewicht des Bürgers vom Teil des Ganzen zum Individuum zu verschieben.
 
 [^1]: Angefangen hat das schon vor Tausenden Jahren, als sich die Menschen (hauptsächlich durch Ackerbau) von der Natur abgenabelt haben.
 
-Die negative Freiheit hat in Europa also ein solides Fundament, ist systemisch gut integriert. Ganz anders ist es mit der positiven Freiheit, die ist viel schwieriger zu greifen und um die soll es gehen.
+Die negative Freiheit hat in Europa also ein solides Fundament, ist systemisch gut integriert. Ganz anders ist es mit der positiven Freiheit, die ist viel schwieriger zu greifen und um die soll es im Folgenden gehen.
 
 Ich denke es führt zu nichts, wenn man sagt, man ist frei alles zu tun und das Thema damit abzuschließen. Genauer wäre es zu sagen, man ist durch Wohlstand und technischen Fortschritt größtenteils davon befreit, Dinge tun zu müssen, hat also geschichtlich gesehen den Zenit an negativer Freiheit erreicht.
 
@@ -45,7 +45,7 @@ Das Gefühl, man habe als Europäer auch die Pflicht sie zu nutzen, um der lange
 
 Es geht ja noch weiter, wenn man sich zu sehr auf die negative Freiheit konzentriert, und versucht sie zu stärken, dreht man sich im Kreis. Sehnt sich nach etwas Bekanntem, etwas mit langer Tradition, und wendet sich gegen das ursprüngliche Ideal. Wenn man sich das Befreien von allen Zwängen zum Lebensinhalt gemacht hat ist das gegen der aufklärerischen Geist, der das überhaupt erst bedingt hat. Ich denke das qualifiziert sich als ein [Catch 22](https://de.wikipedia.org/wiki/Catch-22_(Dilemma) "catch 22")
 
-Man baut sich eine Tradition aus dem Ideal Traditionen abbauen zu wollen. Was ist es, das man damit aufbaut? Der ominöse Nihilismus, in dem nichts mehr irgendwas bedeutet?
+Man baut sich eine Tradition aus dem Ideal Traditionen abbauen zu wollen. Was ist es, was diese Tradition erzeugt und stärkt? Der ominöse Nihilismus, in dem nichts mehr irgendwas bedeutet?
 
 Wir sind (negativ) frei. Und zwar auf einen Level, von dem mehr nicht unbedingt besser ist. Nichts ist so gut, dass mehr davon automatisch besser ist[^2]. Wenn wir uns trotz dieses, bei weitem ausreichendem, Levels an negativer Freiheit weiter auf sie als Ideal konzentrieren ist das eine Perversion des Geistes der Aufklärung. Statt Beschränkungen, Dogmen und Fesseln abzubauen, bauen wir ein neues Sicherheitsgerüst, das der *Wokeness*. Das scheint mir das Problem der *social justice warriors* und der *cancel culture* zu sein. Sie ist der Tod von kreativen öffentlichen Austausch, da jedes Wort auf die Goldwaage gelegt und nach den obskursten Maßstäben der (negativen) Freiheit durchleuchtet wird. Verstößt man gegen ein unrealistisches Ideal ist man öffentlich gecancelt und hat keine Möglichkeit der Rehabilitation.
 
