adds quote to musashi

--- a/_posts/2021-02-11-musashi.markdown
+++ b/_posts/2021-02-11-musashi.markdown
@@ -124,4 +124,6 @@ Musashi [M] im Gespräch mit dem Priester Gudo [G]:
 > [M] Ihr wisst nicht, wie verzweifelt ich gewesen bin. Was soll ich tun? Sagt es mir! Wie kann ich mich aus Nichtstun und Verwirrung befreien?
 > [G] Warum fragt ihr mich? Ihr könnt euch auf euch selbst verlassen.
 
+> Musashi widerstrebte es, ein öffentlicher Held zu sein. Angesichts seiner Taten und Leistungen war es unvermeidlich, dass er einer wurde, doch hatte er das nicht gewollt. Worum es ihm wirklich ging, war einzig, mehr Zeit zum Meditieren zu haben. Er musste zu einer größeren Harmonie gelangen, um sicherzugehen, dass seine Ideen nicht seiner Fähigkeit zu handeln vorauseilten.
+
 > Musashi beobachtete ein kleine Wolke am Himmel. Während er damit beschäftigt war, kehrte seine Seele in seinen Körper zurück, und es war ihm möglich, zwischen der Wolke und sich selbst zu unterscheiden, zwischen seinen Körper und dem Universum.
